add function check result

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    font-family: 'Russo One, Arial';
+    font-family: Russo One, Arial;
     font-weight: lighter;
     letter-spacing: 2px;
     text-align: center;
